--- a/요구사항.md
+++ b/요구사항.md
@@ -48,7 +48,7 @@ RESTful API 설계
 
 DRF를 사용하여 RESTful API를 설계
 주소록과 연락처 관련 CRUD(Create, Read, Update, Delete) 기능을 제공하는 API를 구현
-- 사용자
+- 사용자(유저)
 [GET] /api/users: 모든 사용자 조회
 [POST] /api/register: 새로운 사용자 생성
 [GET] /api/users/{user_id}: 특정 사용자 조회
@@ -71,4 +71,40 @@ DRF를 사용하여 RESTful API를 설계
 [DELETE] /api/profiles/{profile_id}/labels/{labels_id}
 
 
-``
+```
+
+```
+DATA SCHEMA
+1. 사용자(유저)
+{
+    "email": "test@test.com",
+    "password": "test123"
+}
+
+2. 연락처
+{
+    "photo_url": "https://i.pravatar.cc/300",
+    "name": "박민준",
+    "email": "park@example.com",
+    "phone": "010-7777-8888",
+    "company": "D회사",
+    "position": "사원",
+    "memo": "메모4",
+    "address": "부산시 해운대구",
+    "birthday": "1998-07-20",
+    "website": "https://park-example.com",
+    "labels": [
+        {
+            "id": 4,
+            "name": "고객"
+        }
+    ],
+    "user": 1
+}
+
+3. 라벨
+{
+    "name": "라벨1"
+}
+
+```
