[MOD] 요구사항 추가

--- a/요구사항.md
+++ b/요구사항.md
@@ -20,6 +20,12 @@
 $ pip install -r requirements.txt
 $ python backend/manage.py runserver
 
+3. 프론트 접속
+http://localhost:8000/login
+
+ID: test@test.com
+PW: test123
+(data.sql을 Insert 해야 합니다.)
 ```
 
 ```
